<resources>
    <string name="app_name">Echoes</string>
    <string name="creator_image">creator image</string>
    <string name="echo_title">Echo title</string>
    <string name="echo_date">Echo date</string>
    <string name="single_image">single image</string>
    <string name="mood_image">mood image</string>
    <string name="location_icon">location icon</string>
    <string name="echo_location">Echo location</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="mood_tracker">Mood tracker</string>
    <string name="profile">Profile</string>
    <string name="back_button">back button</string>
    <string name="finish">Finish</string>
    <string name="mood_tracker_section">Mood tracker</string>
    <string name="app_name_premium">ECHOES PREMIUM</string>
    <string name="exit_cross">exit cross</string>
    <string name="app_price">€4.99/month</string>
    <string name="cancel_premium">Cancel or pause at any time</string>
    <string name="premium_advantages">Join Echoes Premium and enjoy millions of benefits regarding you and your mood path</string>
    <string name="premium_call">GET PREMIUM TODAY</string>
    <string name="join_now">Join now</string>
    <string name="full_circle_in_background">full circle in background</string>
    <string name="create_echo">Create echo</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_mood">Add Mood</string>
    <string name="this_summary_illustrates_the_distribution_of_overall_moods_saved">This summary illustrates the distribution of overall moods saved.</string>
    <string name="your_moods">Your Moods</string>
    <string name="mood_distribution">Mood Distribution</string>
    <string name="the_chart_illustrates_how_your_mood_has_been_fluctuating_through_the_year">The chart illustrates how your mood has been fluctuating through the year.</string>
    <string name="memory_highlights">Memory Highlights</string>
    <string name="tthe_chart_illustrates_outstanding_moments_over_a_period_of_time">TThe chart illustrates outstanding moments over a period of time.</string>
    <string name="add_location">Add Location</string>
    <string name="tag_someone">Tag someone</string>
    <string name="current_location_icon">current location icon</string>
    <string name="location_location">Location, Location</string>
    <string name="add_title">Add a title</string>
    <string name="add_description">Add a description</string>
    <string name="add_a_date">Add a Date</string>
    <string name="location_selected">Location selected</string>
    <string name="example_date">5 April, 2021</string>
    <string name="record_an_audio">Record an Audio</string>
    <string name="tap_to_record">Tap to record</string>
    <string name="tap_to_stop">Tap again to stop</string>
    <string name="_00_00">00:00</string>
    <string name="make_public">Make public</string>
    <string name="add_to_my_wall">Add to my wall</string>
    <string name="list">List</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="add_selected">Add selected</string>
    <string name="available_image">available image</string>
    <string name="select_photos">Select Photos</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="map_icon">map icon</string>
    <string name="april_2021">April 2021</string>
    <string name="yearly">Yearly</string>
    <string name="alert_title">Oops, something\'s missing!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lets_try">Let\'s try!</string>
    <string name="maybe_later">Maybe later</string>
    <string name="alert_desc">Sadly, you cannot create an echo with no information. Try adding some text or pictures to start with!</string>
    <string name="tagged_friends">Tagged friends</string>
    <string name="audio_indicator">audio indicator</string>
    <string name="_2021">2021</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="private_echo">Private echo</string>

    <string-array name="locations_first_echo">
        <item>Palawan, Philippines</item>
        <item>Shimizu Island, Philippines</item>
        <item>Cuilon Island, Philippines</item>
        <item>Puerto Princesa Subterranean River National Park, Philippines</item>
        <item>Small Lagoon, Philippines</item>
        <item>Madrid, Spain</item>
        <item>Sardinia, Italy</item>
    </string-array>

    <string-array name="locations_second_echo">
        <item>Madrid, Spain</item>
        <item>Palawan, Philippines</item>
        <item>Shimizu Island, Philippines</item>
        <item>Cuilon Island, Philippines</item>
        <item>Puerto Princesa Subterranean River National Park, Philippines</item>
        <item>Small Lagoon, Philippines</item>
        <item>Sardinia, Italy</item>
    </string-array>

    <string-array name="year_month_spinner">
        <item>Yearly</item>
        <item>Monthly</item>
        <item>Daily</item>
    </string-array>
</resources>