<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/overview_page"
        android:enabled="true"
        android:icon="@drawable/img_profile_you"
        android:title="@string/overview"/>

    <item
        android:id="@+id/search_page"
        android:enabled="true"
        android:icon="@drawable/img_profile_you"
        android:title="@string/search"/>

    <item
        android:id="@+id/mood_tracker_page"
        android:enabled="true"
        android:icon="@drawable/img_profile_you"
        android:title="@string/mood_tracker"/>

    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/img_profile_you"
        android:title="@string/profile"/>
</menu>