<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/creator_image_card"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/creator_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/creator_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_profile_amy" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/creator_image_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/creator_image_card"
            app:layout_constraintTop_toTopOf="@id/creator_image_card">

            <TextView
                android:id="@+id/echo_title"
                style="@style/EchoTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/echo_title" />

            <TextView
                android:id="@+id/echo_date"
                style="@style/EchoDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/echo_date" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/echo_single_image_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="14dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_row">

        <ImageView
            android:id="@+id/echo_single_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/single_image"
            android:scaleType="centerCrop"
            android:src="@drawable/img_echo1" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/mood_constraint"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_row" />

    <ImageView
        android:id="@+id/mood_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/mood_image"
        android:src="@drawable/ic_mood_fascinated"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="@id/echo_single_image_card"
        app:layout_constraintTop_toBottomOf="@id/mood_constraint" />

    <ImageView
        android:id="@+id/audio_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/drw_ic_echo_audio_background"
        android:contentDescription="@string/audio_indicator"
        android:elevation="2dp"
        android:padding="5dp"
        android:src="@drawable/ic_audio"
        app:layout_constraintStart_toEndOf="@id/mood_image"
        app:layout_constraintTop_toBottomOf="@id/mood_constraint"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/mood_image"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="4dp"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/location_icon" />

        <TextView
            android:id="@+id/echo_location"
            style="@style/EchoLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/echo_location" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>