<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="24dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <Button
                    android:id="@+id/filter_date"
                    style="@style/Echoes.IconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/drw_mood_tracker_background"
                    android:text="@string/april_2021" />

                <Button
                    android:id="@+id/filter_year_month"
                    style="@style/Echoes.IconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drw_mood_tracker_background"
                    android:text="@string/yearly" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drw_mood_tracker_background"
                android:orientation="vertical"
                android:paddingTop="48dp"
                android:paddingBottom="48dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="48dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/your_moods"
                        android:textColor="@color/label_active"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/this_summary_illustrates_the_distribution_of_overall_moods_saved"
                        android:textColor="@color/label_gray"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/mood_stats"
                    android:layout_width="match_parent"
                    android:layout_height="263dp"
                    android:src="@drawable/drw_your_moods"
                    android:contentDescription="@string/mood_distribution" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drw_mood_tracker_background"
                android:orientation="vertical"
                android:paddingTop="48dp"
                android:paddingBottom="48dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="48dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/mood_distribution"
                        android:textColor="@color/label_active"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/the_chart_illustrates_how_your_mood_has_been_fluctuating_through_the_year"
                        android:textColor="@color/label_gray"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/mood_graph"
                    android:layout_width="match_parent"
                    android:layout_height="149dp"
                    android:src="@drawable/ic_drw_mood_distribution"
                    android:contentDescription="@string/mood_image" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drw_mood_tracker_background"
                android:orientation="vertical"
                android:paddingTop="48dp"
                android:paddingBottom="48dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="48dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/memory_highlights"
                        android:textColor="@color/label_active"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/tthe_chart_illustrates_outstanding_moments_over_a_period_of_time"
                        android:textColor="@color/label_gray"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/mood_highlights"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:src="@drawable/img_highlights"
                    android:contentDescription="@string/mood_tracker" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>